--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,8 @@ eureka:
   client:
     enabled: true
     serviceUrl:
-      defaultZone: http://localhost:8888/eureka/
+#      defaultZone: http://localhost:8888/eureka/
+      defaultZone: http://89.111.174.153:8888/eureka/
+#      defaultZone: 89.111.174.153:8888
 server:
   port: 8888
