--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8761
+
 spring:
   application:
     name: social-network-discovery
@@ -16,10 +19,5 @@ eureka:
   client:
     enabled: true
     serviceUrl:
-#      defaultZone: http://localhost:8888/eureka/
+#      defaultZone: http://localhost:8761/eureka <- работает локально
       defaultZone: http://89.111.174.153:8761/eureka/
-#      defaultZone: http://89.111.174.153:8888/eureka/
-#      defaultZone: 89.111.174.153:8761
-server:
-  port: 8761
-#  port: 8888
