--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,5 @@ eureka:
   client:
     enabled: true
     serviceUrl:
-#      defaultZone: http://localhost:8761/eureka <- работает локально
-      defaultZone: http://89.111.174.153:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
+#      defaultZone: http://89.111.174.153:8761/eureka/
